--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -16,18 +16,34 @@
         border-radius: .5rem;
         border: none;
         font-size: 1rem;
+        font-family: $main-font;
 
     }
     .search-btn {
         display: block;
         margin: 1rem auto;
         padding: 0.5rem 2rem;
-        border: none;
+        border: 2px solid $accent-color;
         border-radius: 2rem;
-        font-size: 0.9rem;
+        font-size: 1rem;
         text-transform: uppercase;
         font-family: $main-font;
-        background-color: $accent-color;
+        background-color: #252424;
+        color: $accent-color;
+        font-weight: 700;
+        letter-spacing: 1.5px;
+        // text-shadow: 0px 5px 5px black;
+        box-shadow: 0px 5px black;
+        &:hover{
+            background-color: #2f2f2f85;
+        }
+        &:active{
+            background-color: #2f2f2f85;
+            box-shadow: 0 2px black;
+            transform: translateY(4px);
+        }
+
+
 
     }
 }
