--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -1,5 +1,8 @@
+
 .search-page-container{
-    margin: 0 1.5rem 1.5rem;
+    margin: 4rem auto;
+    width: 80%;
+
     .search-page-title{
         margin-top: 2rem;
         margin-bottom: 2rem;
@@ -10,7 +13,8 @@
     }
     .search-input-box{
         display: block;
-        padding: 1rem 2rem;
+        color: #fff;
+        padding: 1rem 2.2rem;
         margin: 0 auto;
         background-color: #4C4C4C;
         border-radius: .5rem;
@@ -29,11 +33,11 @@
         text-transform: uppercase;
         font-family: $main-font;
         background-color: #252424;
-        color: $accent-color;
-        font-weight: 700;
+        color: #fff;
+        font-weight: 500;
         letter-spacing: 1.5px;
         // text-shadow: 0px 5px 5px black;
-        box-shadow: 0px 5px black;
+        box-shadow: 0px 5px 5px black;
         &:hover{
             background-color: #2f2f2f85;
         }
@@ -43,7 +47,11 @@
             transform: translateY(4px);
         }
 
+    }
 
-
+    .search-message{
+        // width: 80%;
+        margin-top: 3rem;
+        text-align: center;
     }
 }
